# OneCodePlant

./: .pre-commit-config.yaml  .replit  DEPLOYMENT.md  README.md  demo.html  index.html  pyproject.toml  setup.py  test_cli_demo.py
.github/workflows/: ci.yml
attached_assets/: onecode-plant_cli_guide_1749108515456.md
configs/: default_config.yaml  plugin_config.yaml
docs/: index.md  plugin_development.md  usage.md
examples/mobile_robot_demo/: README.md
examples/nav2_demo/: README.md
onecode/: __init__.py  cli.py
onecode/core/: __init__.py  config.py  plugin_manager.py  ros2_interface.py  utils.py
onecode/plugins/: __init__.py  base.py  colcon_plugin.py  sim_plugin.py
onecode/workflows/: __init__.py  mobile_robot_setup.py
onecode_plant_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: format_code.sh
tests/: __init__.py  conftest.py  test_cli_core.py  test_colcon_plugin.py
